Adding copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2023 Git.Training
+-->
 <head>
 	<title>Change tile for second time</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
