--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2023 Git.Training
 -->
 <head>
-	<title>Change tile for second time</title>
+	<title>A Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some text.
 		</p>
 	</main>
 	<footer class="container">
