--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
+      <!-- Exple row of columns -->
       <div class="row">
         <div class="col-md-4">
           <h2>Heading</h2>
