--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Page Not Found :(</title>
+        <title>Page Not Found sorry</title>
         <style>
             ::-moz-selection {
                 background: #b3d4fc;
